@@ -95,6 +95,10 @@ MavenSnapshotDependency
   - added echo for detected snapshot dependencies
   - added support for build.properties or other similiar properties file which contains key=value tags to replace ${key} type strings in project.xml 
 
+Maven2Builder
+----------------------
+* fix problem where a FATAL ERROR was not detected as an error.
+
 ModificationSet
 ----------------------
 * now calls validate() on all child source controls.
